--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    background-color: darkgreen;
+    background-color: greenyellow
 }
 
 h1 {
     padding-top: 20%;
     padding-bottom: 20%;
     text-align: center;
+    font-family: helvetica sans-serif;
 }
